@@ -3,7 +3,8 @@ package com.github.dabasan.jxm.properties.weapon.xgs;
 import com.github.dabasan.jxm.properties.weapon.*;
 
 import java.io.IOException;
-import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.Arrays;
 
 import static com.github.dabasan.jxm.bintools.ByteFunctions.getShortFromBinLE;
@@ -17,10 +18,10 @@ class XGSReader {
     private final JXMWeapon[] weapons;
     private int pos;
 
-    public XGSReader(InputStream is, int numWeapons) throws IOException {
+    public XGSReader(Path path, int numWeapons) throws IOException {
         weapons = new JXMWeapon[numWeapons];
 
-        byte[] bin = is.readAllBytes();
+        byte[] bin = Files.readAllBytes(path);
         pos = 0x0000000E;
 
         for (int i = 0; i < numWeapons; i++) {
